--- a/src/org/oop/view/Agenda.form
+++ b/src/org/oop/view/Agenda.form
@@ -17,78 +17,119 @@
         <properties>
           <background color="-1907998"/>
           <continuousLayout value="false"/>
-          <dividerLocation value="200"/>
+          <dividerLocation value="334"/>
           <dividerSize value="2"/>
         </properties>
         <border type="none"/>
         <children>
-          <scrollpane id="62701" binding="sidebarpane">
+          <grid id="de1a0" binding="sidebarpanel" layout-manager="GridLayoutManager" row-count="4" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+            <margin top="15" left="7" bottom="14" right="5"/>
             <constraints>
               <splitpane position="left"/>
             </constraints>
             <properties>
-              <background color="-3355444"/>
+              <background color="-1907998"/>
             </properties>
-            <border type="none"/>
+            <border type="none">
+              <title-color color="-16777216"/>
+              <color color="-8487298"/>
+            </border>
             <children>
-              <grid id="de1a0" binding="sidebarpanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-                <margin top="15" left="7" bottom="14" right="0"/>
-                <constraints/>
+              <splitpane id="168a5" binding="insidesplitpane">
+                <constraints>
+                  <grid row="2" column="0" row-span="1" col-span="9" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                    <preferred-size width="200" height="200"/>
+                  </grid>
+                </constraints>
                 <properties>
-                  <background color="-1907998"/>
+                  <background color="-395273"/>
+                  <dividerSize value="0"/>
+                  <orientation value="0"/>
                 </properties>
-                <border type="none">
-                  <title-color color="-16777216"/>
-                  <color color="-8487298"/>
-                </border>
+                <border type="none"/>
                 <children>
-                  <component id="443b8" class="javax.swing.JButton" binding="addinsbutton">
+                  <scrollpane id="3ce38" binding="cicliscrollpane">
                     <constraints>
-                      <grid row="2" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                      <splitpane position="left"/>
                     </constraints>
                     <properties>
-                      <text value="Aggiungi"/>
+                      <background color="-395273"/>
                     </properties>
-                  </component>
-                  <vspacer id="f92a2">
-                    <constraints>
-                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                  </vspacer>
-                  <component id="8659a" class="javax.swing.JLabel" binding="sidebartitle">
-                    <constraints>
-                      <grid row="0" column="0" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties>
-                      <font size="14" style="1"/>
-                      <text value="Elenco insegnamenti"/>
-                    </properties>
-                  </component>
-                  <scrollpane id="a3d1c">
-                    <constraints>
-                      <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                    <properties/>
                     <border type="none"/>
                     <children>
-                      <component id="7321e" class="javax.swing.JList" binding="list1" default-binding="true">
+                      <component id="7731a" class="javax.swing.JList" binding="ciclilist">
                         <constraints/>
-                        <properties/>
+                        <properties>
+                          <background color="-395273"/>
+                          <model/>
+                        </properties>
                       </component>
                     </children>
                   </scrollpane>
-                  <component id="bdf61" class="javax.swing.JButton" binding="deleteelement">
+                  <scrollpane id="49bfb" binding="insegnamentiscrollpane">
                     <constraints>
-                      <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                      <splitpane position="right"/>
                     </constraints>
                     <properties>
-                      <text value="Elimina"/>
+                      <background color="-395273"/>
                     </properties>
-                  </component>
+                    <border type="none"/>
+                    <children>
+                      <component id="ad04" class="javax.swing.JList" binding="insegnamentilist">
+                        <constraints/>
+                        <properties>
+                          <background color="-395273"/>
+                          <model>
+                            <item value="Tecnologie per le telecomunicazioni"/>
+                            <item value="Programmazione ad Oggetti"/>
+                          </model>
+                        </properties>
+                      </component>
+                    </children>
+                  </scrollpane>
                 </children>
-              </grid>
+              </splitpane>
+              <component id="fc333" class="javax.swing.JLabel" binding="sidebartitle">
+                <constraints>
+                  <grid row="0" column="0" row-span="1" col-span="9" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <font size="14" style="1"/>
+                  <foreground color="-13421773"/>
+                  <text value="Cicli e insegnamenti"/>
+                </properties>
+              </component>
+              <component id="34a3" class="javax.swing.JLabel" binding="sidebardescription">
+                <constraints>
+                  <grid row="1" column="0" row-span="1" col-span="9" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <foreground color="-5461077"/>
+                  <text value="Aggiungi cicli e insegnamenti"/>
+                </properties>
+              </component>
+              <component id="3d5e2" class="javax.swing.JButton" binding="addciclobutton">
+                <constraints>
+                  <grid row="3" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false">
+                    <preferred-size width="20" height="32"/>
+                  </grid>
+                </constraints>
+                <properties>
+                  <horizontalAlignment value="0"/>
+                  <horizontalTextPosition value="4"/>
+                  <text value="+ Ciclo"/>
+                </properties>
+              </component>
+              <component id="46df7" class="javax.swing.JButton" binding="removeciclobutton">
+                <constraints>
+                  <grid row="3" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="- Ciclo"/>
+                </properties>
+              </component>
             </children>
-          </scrollpane>
+          </grid>
           <grid id="fc1e7" binding="activitypanel" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="15" left="5" bottom="5" right="5"/>
             <constraints>
