--- a/src/org/oop/view/Profilo.form
+++ b/src/org/oop/view/Profilo.form
@@ -50,7 +50,7 @@
               </component>
             </children>
           </grid>
-          <grid id="2b50f" binding="librettopanel" layout-manager="GridLayoutManager" row-count="3" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="2b50f" binding="librettopanel" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <splitpane position="right"/>
@@ -62,12 +62,12 @@
             <children>
               <scrollpane id="de599">
                 <constraints>
-                  <grid row="1" column="0" row-span="2" col-span="11" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                  <grid row="0" column="0" row-span="2" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties/>
                 <border type="none"/>
                 <children>
-                  <component id="729bc" class="javax.swing.JTable" binding="instable">
+                  <component id="729bc" class="javax.swing.JTable" binding="insegnamentotable">
                     <constraints/>
                     <properties/>
                     <clientProperties>
@@ -76,20 +76,20 @@
                   </component>
                 </children>
               </scrollpane>
-              <component id="d230b" class="javax.swing.JButton" binding="deleteriga">
-                <constraints>
-                  <grid row="0" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
-                </constraints>
-                <properties>
-                  <text value="Elimina"/>
-                </properties>
-              </component>
               <component id="42ed8" class="javax.swing.JButton" binding="addriga">
                 <constraints>
-                  <grid row="0" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                  <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
                   <text value="Aggiungi"/>
+                </properties>
+              </component>
+              <component id="d230b" class="javax.swing.JButton" binding="deleteriga">
+                <constraints>
+                  <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
+                </constraints>
+                <properties>
+                  <text value="Elimina"/>
                 </properties>
               </component>
             </children>
