--- a/src/org/oop/view/Immatricolazione.form
+++ b/src/org/oop/view/Immatricolazione.form
@@ -48,7 +48,7 @@
           <text value="Data Di Nascita"/>
         </properties>
       </component>
-      <component id="6bf45" class="javax.swing.JFormattedTextField" binding="datanascita">
+      <component id="6bf45" class="javax.swing.JFormattedTextField" binding="datanascita" custom-create="true">
         <constraints>
           <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
